# PDV

./: README.md  poznamky.txt
01intro/: CMakeLists.txt
01intro/src/: 0cpp20.cpp  0hello.cpp  1memory.cpp  2matrix.cpp  3false_sharing.cpp  5ema.cpp
02threads/: CMakeLists.txt
02threads/src/: 1threads.cpp  1threads.h  1threads_benchmark.cpp  2condition_variable.cpp
03openmp/src/: 1openmp_test.cpp  2integrate.cpp
04cds/src/: 1ConcurrentLinkedList.h  2LockFreeLinkedList.h  SequentialLinkedList.h
05tasks/src/: 1early_exit.cpp  2cancellations.cpp  3tasks.cpp
06sort/: CMakeLists.txt
06sort/src/: 1mergesort.cpp  1mergesort.h  2countsort.cpp  2countsort.h  3prefixsum.cpp  3prefixsum.h
07simd/: CMakeLists.txt
07simd/src/: 3normal_distribution.cpp
09/src/cz/cvut/fel/agents/pdv/bfs/: BFSProcess.java  PathMessage.java  SearchMessage.java  SlowOptimalPath.java
cviceni vlaken /: a.out  main.cpp
pdv-01thrpool/src/: ThreadPool.h  main
pdv-02openmp/src/: vector_sum.cpp
pdv-03bst/src/: bst_tree.cpp  bst_tree.h
pdv-04database/: CMakeLists.txt
pdv-04database/src/: generator.cpp  generator.h  main.cpp  query.cpp  query.h
pdv-05sort/src/: main.cpp  sort.cpp
pdv-06search/: CMakeLists.txt
pdv-06search/src/: bfs.cpp  bfs.h  iddfs.cpp  main.cpp  state.h
pdv-06search/src/domains/: hanoi.h  maze.h  sat.h  sliding_puzzle.h
